scrollbar fix

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,5 +16,4 @@
 
 @import "compass/layout/sticky-footer";
 @include sticky-footer(150px);
-body {overflow:hidden;}
 thead {background: #C59217;}
