--- a/app/assets/stylesheets/iu.css.scss
+++ b/app/assets/stylesheets/iu.css.scss
@@ -189,7 +189,6 @@
 
 #footer {
 	border-top: 6px solid #7d110c;
-	margin-top: 40px;
 	padding: 40px 0 30px 0;
 	position: relative;
 	text-align: left;
